port(data): update clocks and SavedData types for 26.1